--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -1,27 +1,40 @@
 body {
   background: #eee;
   font-family: sans-serif;
+
 }
 
 .card {
   width: 400px;
   background: #fff;
-  margin: 16px auto;
+  margin: 1px auto;
+  padding: 9px;
+  font-size: 16px;
 }
 
 .title {
   background: #e3f4ff;
+  margin-top: 1px;
+  margin-bottom: 10px;
+  padding:9px;
 }
 
 .content {
   background: #e3f4ff;
+  margin-bottom: 8px;
+  padding:9px;
 }
 
 .button-container {
   background: #e3f4ff;
+  padding:9px;
+  text-align: center;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  margin: 0 auto;
+  padding: 8px 24px;
+  display: block;
 }
