--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -14,6 +14,7 @@ body {
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
   display: flex;
+  padding: 8px;
 }
 
 .profile-image {
@@ -47,4 +48,25 @@ a {
 
 ul {
   list-style-type: none;
+}
+
+.right{
+  display: flex;
+  margin-left: auto;
+  gap: 16px;
+  align-items: center;
+}
+
+.links{
+  display: flex;
+  gap: 8px;
+  margin: 0;
+  padding: 0px;
+  gap: 16px;
+}
+
+.left{
+  display: flex;
+  align-items: center;
+  gap: 16px;
 }
