--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
 }
 
 img {
@@ -10,6 +11,7 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  justify-content: center;
 }
 
 /* do not edit this footer */
@@ -23,4 +25,30 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+
+.picText{
+  display: flex;
+  gap: 52px;
+  justify-content: center;
+}
+
+.picture1,.picture2,.picture3,.picture4{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-items: center;
+  width: 200px;
+}
+
+.all{
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
+
+.title{
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
