--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -16,10 +16,13 @@ body {
 }
 
 .modal {
+  display: flex;
   background: white;
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  padding: 15px;
+  gap: 15px;
 }
 
 .icon {
@@ -33,6 +36,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex: 0 0 auto;
 }
 
 .close-button {
@@ -46,6 +50,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-left: auto;
 }
 
 button {
@@ -57,10 +62,39 @@ button.continue {
   background: royalblue;
   border: 1px solid royalblue;
   color: white;
+  width: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 button.cancel {
+  display: flex;
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+  width: 80px;
+  justify-content: center;
+  align-items: center;
+}
+
+.right{
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.header{
+  font-weight: bold;
+  font-size:large;
+}
+
+.buttons{
+  display: flex;
+  gap: 5px;
+}
+
+.msgAndClose{
+  display: flex;
+
 }
